Updated Resume September 2020

--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,7 @@
                         <li class = "links"><a href = "projects.php">Personal Projects</a>                </li>
                         <li class = "links"><div class = "dropdown"><a class = "dropbtn" href = "photography.html">Photography</a>
                             <div class = "dropdown-content">
+                                <a href="photography.html">Faro Photos</a>
                                 <a href="serene.html">Serene</a>
                                 <a href="portraits.html">Portraits</a>
                                 <a href="stills.html">Stills</a>
@@ -35,6 +36,14 @@
             <div id = "header-words">
                 <p data-aos = "zoom-out">RESUME</p>
                 <p id = "arrow">&darr;</p>
+            </div>
+            <div id = "floater">
+                <div class = "social-image">
+                    <a href="http://linkedin.com/in/noahfaro"><img src="/images/linkedin1.png" alt="LinkedIn: noahfaro"></a>
+                </div>
+                <div class = "social-image" style="margin-right: 0;">
+                    <a href="mailto:nfaro@mit.edu"><img src="/images/email1.png" alt="Email: nfaro@mit.edu"></a>
+                </div>
             </div>
         </header>
         <section>
@@ -56,14 +65,13 @@
                                     Bachelor of Science in Computer Science and Engineering (Course 6-3)
                                 </li>
                                 <li>
-                                    Minor in Biology and a Concentration in Spanish
+                                    Minor in Biology and a Concentration in Economics
                                 </li>
                                 <li>
-                                    <strong>Relevant Coursework:</strong> Discrete Math in Computer Science, Differential Equations, 
-                                    Genetics, Thermodynamics of Molecular Systems, Organic Chemistry
-                                </li>
-                                <li>
-                                    <strong>Current Coursework:</strong> Computer Algorithms, Machine Learning, Biochemistry
+                                    <strong>Relevant Coursework:</strong> Machine Learning, Elements of Software Construction, 
+                                    Design and Analysis of Algorithms, Computation Structures, Discrete Math in Computer Science, 
+                                    Differential Equations, Biochemistry, Organic Chemistry,
+                                    Genetics, Thermodynamics of Molecular Systems
                                 </li>
                             </ul>
                         <div style = "clear: both" class = "test">
@@ -72,8 +80,8 @@
                         </div>
                             <ul class = "bullets">
                                 <li>
-                                    <strong>Extracurriculars:</strong> National Honor Society, Student-Faculty-Administration Senate, 
-                                    Varsity Soccer Captain, Science National Honor Society
+                                    <strong>Extracurriculars:</strong> Varsity Soccer Captain, National Honor Society, 
+                                    Student-Faculty-Administration Senate, Science National Honor Society
                                 </li>
                                 <li>
                                     <strong>Academic Honors:</strong> Ranked Third in Class of 800, NYSPHAA Academic Award, President's
@@ -93,17 +101,17 @@
                     <div class= "text" >
                         <ul class = "bullets">
                             <li>
-                                <Strong>Programming Languages:</Strong> Python, HTML/CSS, Javascript, Java, MATLAB
+                                <Strong>Programming Languages:</Strong> Python, Java, NodeJS, Javascript, GraphQL, HTML/CSS, MATLAB, Arduino
                             </li>
                             <li>
-                                <strong>Other Skills:</strong> TensorFlow, Web Development, Microsoft Office, Object Oriented Programming, 
-                                Data Analysis, Django, TkInter, OCR, Arduino, RaspberryPi, Prism
+                                <strong>Other Skills:</strong> TensorFlow, REST APIs, Apollo Client, Electron, Jest, Cypress, Django, Web Development,  OpenCV, Microsoft Office,
+                                Prism, TkInter, OCR, Arduino, Data Analysis
                             </li>
                             <li>
-                                <strong>Developing Skills:</strong> React, SQL
+                                <strong>Familiar With:</strong> C, SQL
                             </li>
                         </ul>
-                        <p><strong>Career Interests:</strong> Full-Stack CS, Machine Learning Applications, Consumer-Product Interactions, Behavior Prediction</p>
+                        <p><strong>Career Interests:</strong> Full-Stack CS, Machine Learning Applications, Integration Engineering, Front-End Design, Behavior Prediction</p>
                     </div>
                 </section>
                 <br><br>
@@ -112,47 +120,62 @@
                         <h2>Professional Experience</h2>
                     </div>
                     <div class = "text">
+                    <h3  style = "clear: both" class = "company"><a href = "https://affect.media.mit.edu/"> Affective Computing Group at MIT Media Lab</a></h3>
+                    <div style = "clear: both">
+                        <h3 class = "prof-title">Machine Learning Researcher and Data Analyst</h3>
+                        <h4 >Cambridge, MA &#8729 June 2020 - Present</h4>
+                    </div>
+                        <ul class = "bullets">
+                            <li>
+                                Leverage machine learning algorithms with TensorFlow to find correlations between physiological traits and depression                            </li>
+                            <li>
+                                Optimize raw data processing to increase automation of displaying a user's clinical results on a visualization platform                            </li>
+                            <li>
+                                Collaborate with Massachusetts General Hospital’s Depression Clinical & Research Program to design better presentations of patient data on a Django system to make trends more digestible                            </li>
+                        </ul>
+
+                        <h3  style = "clear: both" class = "company"><a href = "https://www.forecastr.co/"> Forecastr</a></h3>
+                    <div style = "clear: both">
+                        <h3 class = "prof-title">Software Engineering Intern</h3>
+                        <h4 >Louisville, KY &#8729 June 2020 - September 2020</h4>
+                    </div>
+                        <ul class = "bullets">
+                            <li>
+                                Created a front and back-end system using NodeJS, GraphQL, and Apollo Client to allow users to fetch and analyze their company's historical data from a third party API to provide insights into the business's best next steps in growth    </li>
+                            <li>
+                                Built components in the main parts of the app using React to improve the user's experience in navigating the platform </li>
+                            <li>
+                                Incorporated Jest unit tests and Cypress end to end tests to increase coverage of significant parts of the codebase to make our service more reliable and ready for change             </li>
+                        </ul>
+
                         <h3  style = "clear: both" class = "company"><a href = "https://lyndra.com"> Lyndra Therapeutics, Inc.</a></h3>
                     <div style = "clear: both">
                         <h3 class = "prof-title">Software Engineering Intern</h3>
-                        <h4 >Watertown, MA &#8729 June 2019 - Present</h4>
+                        <h4 >Watertown, MA &#8729 June 2019 - June 2020</h4>
                     </div>
                         <ul class = "bullets">
                             <li>
-                                Led the software and user interface production for novel in-house machines used to simulate gastric emptying waves using Python and TkInter
+                                Constructed software and user-interfaces with Electron for novel in-house machines to simulate gastric emptying waves
                             </li>
                             <li>
-                                Designed a secure online platform using Django for a mechanical stomach model that displayed a user interface 
-                                and live video feed, allowing employees to conduct experiments from outside the lab
+                                Designed a secure online platform using Django that included a live video feed of machines, allowing employees to conduct experiments from outside the lab
                             </li>
                             <li>
-                                Created a software that allowed employees to take a receipt from an online mechanical part order and automatically input 
-                                each item’s title, quantity, price, and skew number into the company’s database
-                            </li>
-                            <li>
-                                Developing a machine vision software using TensorFlow to analyze a video file for changes in a dosage form’s structure that 
-                                occurred during strength and compression testing
+                                Created a software using Optical Character Recognition that allowed employees to take a receipt from a mechanical part order and automatically input each item’s title, quantity, price, and skew number into the company’s database
                             </li>
                         </ul>
+                    
                     <h3  style = "clear: both" class = "company"><a href = "https://langerlab.mit.edu">Koch Institute for Integrative Cancer Research - Langer Lab</a></h3>
                     <div style = "clear: both">
                         <h3  class = "prof-title">Data Analyst and Biochemical Researcher</h3>
-                        <h4 >Cambridge, MA &#8729 Oct 2018 - Present</h4>
+                        <h4 >Cambridge, MA &#8729 Oct 2018 - May 2020</h4>
                     </div>
                         <ul class = "bullets">
                             <li>
-                                Held responsibility for the production of a novel therapeutic’s potential delivery system and cell culturing for a project 
-                                designed to develop treatment for a lethal heart condition called myocarditis
+                                Held responsibility for the production of a novel therapeutic’s potential delivery system and cell culturing for a project designed to develop treatment for a lethal heart condition called myocarditis
                             </li>
                             <li>
-                                Utilized flow cytometry, particle size analysis, cell viability/fluorescence assays, ITC, and programming prediction models 
-                                and visuals for both data collection and analysis
-                            </li>
-                            <li>Independently analyzing thousands of pieces of data on PDFs using OCR to determine statistics for cell viability and molecular 
-                                uptake for each type of delivery method
-                            </li>
-                            <li>
-                                Generating figures using Prism, MATLAB, and R to display conclusions drawn from collected data for publications
+                                Led data collection and analysis using flow cytometry, particle size analysis, cell viability/fluorescence assays, and programming prediction models and visuals using MATLAB and R
                             </li>
                         </ul>
                     </div>
@@ -170,27 +193,27 @@
                         </div>
                             <ul class = "bullets">
                                 <li>
-                                    Facilitated interactions between new and returning counselors to encourage expanded involvement and enthusiasm in Camp Kesem
+                                    Facilitate interactions between new and returning counselors to encourage expanded involvement and enthusiasm in Camp Kesem
                                 </li>
                                 <li>
-                                    Established and maintained trusted relationships with children whose families have been affected by cancer in order to provide 
-                                    a safe space for them to talk about their struggles
+                                    Establish and maintain trusted relationships with children whose families have been affected by cancer in order to provide 
+                                    a safe space for them to talk about their experiences
                                 </li>
                                 <li>
-                                    Organized and led inclusive activities for children of multiple age groups and interests
+                                    Organize and lead inclusive activities for children between the ages of six and thirteen in order to promote amusement, safety, and cohesion
                                 </li>
                             </ul>
-                        <h3  style = "clear: both" class = "company">Phi Beta Epsilon</h3>
+                        <h3  style = "clear: both" class = "company"><a href = "http://pbe.mit.edu/">Phi Beta Epsilon</a></h3>
                         <div style = "clear: both">
                             <h3  class = "prof-title">Networking and Events Coordinator</h3>
                             <h4 >Cambridge, MA &#8729 Sept 2019 - Present</h4>
                         </div>
                             <ul class = "bullets">
                                 <li>
-                                    Design and promote events to encourage the interactions of the members of Phi Beta Epsilon with the surrounding community
+                                    Coordinate events to promote the interactions of the members of Phi Beta Epsilon with the greater Boston community
                                 </li>
                                 <li>
-                                    Planned and scheduled a formal reunion between active members and the alumni of the organization while encouraging participation and managing a budget
+                                    Plan, schedule, and finance a formal reunion between active members and the alumni of the organization
                                 </li>
                             </ul>
                         <h3  style = "clear: both" class = "company"><a href = "https://www.loisabaccf.org/">Loisaba Community Conservation Foundation</a></h3>
@@ -245,7 +268,7 @@
             </div>
         </footer>
     </body>
-    <script src = "js/custom.js"></script>
+    <script src = "js/customresume.js"></script>
     <script src = "js/jquery-3.4.1.min.js"></script>
     <script src = "js/aos.js"></script>
     <script src = "js/aosinit.js"></script>
